<resources>
    <string name="app_name">OMRSheetScanner</string>
    <string name="text_btn_create_new_exam">Nova prova</string>
    <string name="text_exam_camera">Corrigir prova</string>
    <string name="text_btn_my_exams">Minhas provas</string>
    <string name="text_label_my_exam">MyExam</string>
    <string name="text_btn_continue">Continuar</string>
    <string name="text_exam_data">Dados da prova:</string>
    <string name="text_label_exam_name">Nome da prova:</string>
    <string name="text_label_exam_description">Descrição:</string>
    <string name="text_label_amount_of_questions">Quantidade de questões:</string>
    <string name="text_label_amount_of_options">Quantidade de alternativas:</string>
    <string name="label_label_text_max_score">Nota máxima:</string>
    <string name="text_warning_fill_exam_title">O nome da prova precisa ser preenchido</string>
    <string name="text_warning_invalid_score">A nota máxima da prova precisa ser maior do que 0</string>
    <string name="text_default_max_score">10</string>
    <string name="text_invalid_max_score">0</string>
    <string name="text_warning_all_options_must_be_chosen">Todas as opções devem ser escolhidas</string>
    <string name="text_question_number">%s:</string>
    <string name="text_search_exams">Buscar prova</string>
    <string name="text_search_student">Buscar aluno</string>
    <string name="title_registered_exams">Provas cadastradas:</string>
    <string name="text_couldnt_find_exams">Prova não encontrada</string>
    <string name="text_couldnt_find_students">Aluno não encontrado não encontrada</string>
    <string name="text_no_students">Nenhum aluno cadastrado</string>
    <string name="text_no_exams">Nenhuma prova cadastrada</string>
    <string name="title_my_exams">Minhas provas</string>
    <string name="text_btn_save_exam">Imprimir prova</string>
    <string name="text_btn_review_exam">Corrigir prova</string>
    <string name="text_btn_delete_exam">Excluir prova</string>

    <string name="arg_type_name_my_exam">MyExam</string>
    <string name="btn_save_exam">Salvar</string>
    <string name="btn_cancel_exam">Cancelar</string>
    <string name="text_label_student_grade">Nota:</string>
    <string name="text_label_student_name">Nome do aluno:</string>
    <string name="title_delete_exam">Excluir prova</string>
    <string name="message_delete_exam">Tem certeza que dejesa excluir a prova</string>

    <string-array name="amount_options">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="amount_questions">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
</resources>