<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:navigationIcon="@drawable/arrow_back"
            app:title="@string/title_my_exams"
            app:titleCentered="true"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="Matematica 2023/2" />

            <TextView
                android:id="@+id/descriptionExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:text="Prova de matematica para recuperação da turma 6ºA" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_white_16dp"
                android:text="@string/text_btn_save_exam"
                android:textAllCaps="false"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReviewExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_white_16dp"
                android:text="@string/text_btn_review_exam"
                android:textAllCaps="false"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleteExam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_white_16dp"
                android:text="@string/text_btn_delete_exam"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:theme="@style/SearchViewTheme"
                app:defaultQueryHint="@string/text_search_student"
                app:queryBackground="@null"
                app:searchIcon="@drawable/ic_search" />

            <TextView
                android:id="@+id/textNoStudentsSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="40dp"
                android:gravity="center"
                android:text="@string/text_couldnt_find_students"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textNoStudents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="40dp"
                android:gravity="center"
                android:text="@string/text_no_students"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/studentsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:paddingVertical="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_student" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>