<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:navigationIcon="@drawable/arrow_back"
            app:title="@string/text_btn_create_new_exam"
            app:titleCentered="true"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleExamData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/text_exam_data"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelExamName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/text_label_exam_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleExamData" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/examNameEditLayout"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                app:boxBackgroundColor="@drawable/bg_white_16dp"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelExamName">

                <EditText
                    android:id="@+id/examNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_white_16dp"
                    android:gravity="center"
                    android:inputType="text"
                    android:textColor="@color/primaryColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/labelExamDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/text_label_exam_description"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/examNameEditLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/examDescriptionEditLayout"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                app:boxBackgroundColor="@drawable/bg_white_16dp"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelExamDescription">

                <EditText
                    android:id="@+id/examDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_white_16dp"
                    android:inputType="textCapWords"
                    android:textColor="@color/primaryColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/labelAmountOfOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/text_label_amount_of_options"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/spinnerAmountOptions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spinnerAmountOptions" />

            <Spinner
                android:id="@+id/spinnerAmountOptions"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_white_16dp"
                android:entries="@array/amount_options"
                android:popupBackground="@android:color/white"
                android:popupTheme="@style/spinnerTheme"
                android:spinnerMode="dropdown"
                android:theme="@style/spinnerTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/examDescriptionEditLayout" />

            <TextView
                android:id="@+id/labelAmountOfQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/text_label_amount_of_questions"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/spinnerAmountQuestions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spinnerAmountQuestions" />

            <Spinner
                android:id="@+id/spinnerAmountQuestions"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_white_16dp"
                android:entries="@array/amount_questions"
                android:popupBackground="@android:color/white"
                android:popupTheme="@style/spinnerTheme"
                android:spinnerMode="dropdown"
                android:theme="@style/spinnerTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerAmountOptions" />

            <TextView
                android:id="@+id/labelMaxScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/label_label_text_max_score"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/examMaxScoreEditLayout"
                app:layout_constraintBottom_toBottomOf="@id/examMaxScoreEditLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/examMaxScoreEditLayout"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                app:boxBackgroundColor="@drawable/bg_white_16dp"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerAmountQuestions" >

                <EditText
                    android:id="@+id/examMaxScoreEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_default_max_score"
                    android:background="@drawable/bg_white_16dp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/primaryColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_white_16dp"
                android:text="@string/text_btn_continue"
                android:textAllCaps="false"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>